# AIPrograms

./: .gitignore  README.md
GeneticAlgorithmPassword/: CMakeLists.txt  Note.txt
GeneticAlgorithmPassword/src/: PopulationData.cpp  PopulationData.h  main.cpp  testMain.cpp
GeneticAlgorithmTutorial2/: CMakeLists.txt  Note.txt
GeneticAlgorithmTutorial2/src/: Algorithm.cpp  Algorithm.h  FitnessCalc.cpp  FitnessCalc.h  Individual.cpp  Individual.h  Population.cpp  Population.h  main.cpp
LogisticRegressionTest/: CMakeLists.txt
LogisticRegressionTest/LogisticRegressionTest.xcodeproj/: project.pbxproj
LogisticRegressionTest/LogisticRegressionTest.xcodeproj/project.xcworkspace/xcuserdata/sohailshafii.xcuserdatad/: UserInterfaceState.xcuserstate
LogisticRegressionTest/LogisticRegressionTest.xcodeproj/xcshareddata/xcschemes/: LogisticRegressionTest.xcscheme
LogisticRegressionTest/LogisticRegressionTest.xcodeproj/xcuserdata/sohailshafii.xcuserdatad/xcschemes/: xcschememanagement.plist
LogisticRegressionTest/src/: main.cpp  stb_image_resize.h
NeuralNetEvolution/: CMakeLists.txt  Note.txt
NeuralNetEvolution/src/: Common.cpp  Common.h  Individual.cpp  Individual.h  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp
TowardDataScienceNeuralNet/: CMakeLists.txt
TowardDataScienceNeuralNet/src/: Common.cpp  Common.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  main.cpp  test.py
